converted getFirst to get(0)